--- a/styles.css
+++ b/styles.css
@@ -88,8 +88,6 @@ body {
   margin-right: 40px;
 }
 
-
-
 a {
     text-decoration: none;
     color: var(--neutral-black);
@@ -104,8 +102,6 @@ a {
     line-height: 30px;
     text-transform: capitalize;
 }
-
-
 
 .button {
     padding: 15px 0; /* Adjust padding as needed */
@@ -145,9 +141,7 @@ nav {
     flex-direction: row;
 }
 
-div {
-    mix-blend-mode: multiply;
-}
+
 
 .mobile-bar {
     list-style: none;
